# webshot

./: Cargo.toml  Dockerfile  Makefile  README.md  webshot.toml
src/: main.rs
src/scanning/: config.rs  dns.rs  mod.rs  os_fingerprint.rs  scanner.rs  tcp.rs  types.rs  user-agents.txt  utils.rs
src/service-probe/: nmap-service-probe.txt
tests/: integration_tests.rs
