[package]
name = "webshot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.3", features = ["full"] }
futures = "0.3.30"
colored = "2.1.0"
cli-table = "0.4.9"
url = "2.5.2"
reqwest = { version = "0.12.7", features = ["json"] }
chrono = "0.4.39"
regex = "1.11.1"
pnet = "0.35.0"
pnet_sys = "0.35.0"